# yastm

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakePresetsComments.md  LICENSE  README.md  build-all.ts  build.ts  deno.jsonc  format.ts  import_map.json  vcpkg.json
cmake/: version.hpp.in  version.rc.in
docs/: soultrapalgorithm.md
examples/: YASTM.toml  YASTM_InigoDiversionIgnore.toml  YASTM_Vanilla.toml
examples/Interface/Translations/: YASTM_ENGLISH.txt
scripts/: typanion.ts
src/: ChargeItemFix.cpp  ChargeItemFix.h  ChargeItemFix.hpp  EnchantItemFix.cpp  EnchantItemFix.h  EnchantItemFix.hpp  PCH.h  PCH.hpp  SoulSize.hpp  SoulTrapFix.cpp  SoulTrapFix.hpp  SoulValue.hpp  TrapSoulFix.cpp  TrapSoulFix.hpp  Victim.cpp  Victim.hpp  expectedbytes.hpp  global.hpp  main.cpp  messages.hpp  offsets.h  offsets.hpp  trampoline.hpp  versiondb.h  versiondb.hpp
src/RE/S/: SoulsTrapped.cpp  SoulsTrapped.hpp
src/config/: ActorBase.hpp  ActorRef.hpp  ConcreteSoulGemGroup.cpp  ConcreteSoulGemGroup.hpp  ConfigKey.hpp  DllDependencyKey.hpp  Form.hpp  FormError.cpp  FormError.hpp  FormId.cpp  FormId.hpp  FormLocator.hpp  GlobalId.cpp  GlobalId.hpp  GlobalVarForm.hpp  GlobalVariable.cpp  GlobalVariable.hpp  LoadPriority.hpp  ParseError.cpp  ParseError.hpp  SoulGemConfig.cpp  SoulGemConfig.hpp  SoulGemGroup.cpp  SoulGemGroup.hpp  SoulGemId.cpp  SoulGemId.hpp  SoulGemMap.cpp  SoulGemMap.hpp  SoulSize.hpp  SpecificationError.cpp  SpecificationError.hpp  YASTMConfig.cpp  YASTMConfig.hpp  _formaterror.hpp  utilities.hpp
src/config/ConfigKey/: BoolConfigKey.hpp  EnumConfigKey.hpp  IntConfigKey.hpp
src/formatters/: TESForm.hpp  TESSoulGem.hpp
src/fsutils/: FSUtils.cpp  FSUtils.hpp
src/fsutils/internal/: Config.cpp  Config.hpp  ConfigManager.cpp  ConfigManager.hpp
src/fsutils/papyrus/: YASTMFSUtils.psc  YASTMUtils.psc
src/trapsoul/: InventoryStatus.hpp  SearchResult.hpp  SoulTrapData.cpp  SoulTrapData.hpp  Victim.cpp  Victim.hpp  messages.hpp  trapsoul.cpp  trapsoul.hpp  types.hpp
src/utilities/: EnumArray.hpp  EnumVector.hpp  FormType.hpp  PapyrusFunctionRegistry.hpp  TESObjectREFR.cpp  TESObjectREFR.hpp  TESSoulGem.cpp  TESSoulGem.hpp  Timer.hpp  algorithms.hpp  assembly.hpp  containerutils.hpp  formidutils.hpp  misc.cpp  misc.hpp  native.hpp  printerror.cpp  printerror.hpp  rng.hpp  soultraputilities.cpp  soultraputilities.hpp  soultraputils.cpp  soultraputils.hpp  stringutils.hpp
src/yastmutils/: YASTMUtils.cpp  YASTMUtils.hpp
